--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {
   "name": "no-music",
   "version": "1.0.0",
@@ -23,7 +22,7 @@
     "url": "git+https://github.com/[اسم_حسابك]/no-music.git"
   }
 }
-=======
+
 {
   "name": "no-music",
   "version": "1.0.0",
@@ -45,7 +44,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/[اسم_حسابك]/no-music.git"
+    "url": "https://github.com/moha811/music.git"
   }
 }
->>>>>>> 6020f20 (first commit)
